Bug 290422 ''usemap'' attribute for IMG tags work without a needed "#" before inline maps. patch by bugzilla@philringnalda.com r=bz sr=bz